@@ -1,696 +1,600 @@
 package io.kestra.webserver.controllers.api;
 
-import io.kestra.core.junit.annotations.FlakyTest;
+import java.time.Clock;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.Collections;
+import java.util.List;
+import java.util.concurrent.TimeoutException;
+import java.util.stream.Stream;
+
+import org.awaitility.Awaitility;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
+import io.kestra.core.exceptions.FlowProcessingException;
 import io.kestra.core.junit.annotations.KestraTest;
-import io.kestra.core.models.QueryFilter;
 import io.kestra.core.models.flows.Flow;
+import io.kestra.core.models.flows.FlowId;
 import io.kestra.core.models.flows.GenericFlow;
 import io.kestra.core.models.property.Property;
-import io.kestra.core.models.triggers.Trigger;
-import io.kestra.core.models.triggers.TriggerContext;
+import io.kestra.core.queues.QueueException;
+import io.kestra.core.runners.Scheduler;
+import io.kestra.core.scheduler.SchedulerConfiguration;
+import io.kestra.core.scheduler.model.TriggerState;
+import io.kestra.core.scheduler.vnodes.VNodes;
+import io.kestra.core.services.FlowService;
 import io.kestra.core.tasks.test.PollingTrigger;
-import io.kestra.core.tenant.TenantService;
 import io.kestra.core.utils.Await;
 import io.kestra.core.utils.IdUtils;
-import io.kestra.core.utils.TestsUtils;
-import io.kestra.jdbc.repository.AbstractJdbcFlowRepository;
+import io.kestra.jdbc.JdbcTestUtils;
 import io.kestra.jdbc.repository.AbstractJdbcTriggerRepository;
 import io.kestra.plugin.core.debug.Return;
-import io.kestra.plugin.core.log.Log;
 import io.kestra.plugin.core.trigger.Schedule;
 import io.kestra.webserver.controllers.api.TriggerController.SetDisabledRequest;
 import io.kestra.webserver.responses.BulkResponse;
 import io.kestra.webserver.responses.PagedResults;
-import io.kestra.webserver.tenants.TenantValidationFilter;
+
 import io.micronaut.core.type.Argument;
-import io.micronaut.data.model.Pageable;
 import io.micronaut.http.HttpRequest;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.http.client.annotation.Client;
 import io.micronaut.http.client.exceptions.HttpClientResponseException;
 import io.micronaut.reactor.http.client.ReactorHttpClient;
-import io.micronaut.test.annotation.MockBean;
-import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
 import jakarta.inject.Inject;
-import org.junit.jupiter.api.Test;
 
-import java.time.Duration;
-import java.time.ZonedDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.concurrent.TimeoutException;
-
-import static io.kestra.core.tenant.TenantService.MAIN_TENANT;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.groups.Tuple.tuple;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 @KestraTest(startRunner = true, startScheduler = true)
 class TriggerControllerTest {
-    public static final String TRIGGER_PATH = "/api/v1/%s/triggers";
+
+    public static final String TENANT_ID = "main";
+    public static final String TRIGGER_PATH = "/api/v1/main/triggers";
 
     @Inject
     @Client("/")
     ReactorHttpClient client;
 
     @Inject
-    AbstractJdbcFlowRepository jdbcFlowRepository;
+    FlowService flowService;
 
     @Inject
     AbstractJdbcTriggerRepository jdbcTriggerRepository;
 
-    @MockBean(TenantService.class)
-    public TenantService getTenantService(){
-        return mock(TenantService.class);
-    }
     @Inject
-    private TenantService tenantService;
+    JdbcTestUtils jdbcTestUtils;
 
-    @MockBean(TenantValidationFilter.class)
-    public TenantValidationFilter getTenantValidationFilter(){
-        return mock(TenantValidationFilter.class);
+    @Inject
+    Scheduler scheduler;
+
+    @Inject
+    SchedulerConfiguration schedulerConfiguration;
+
+    @BeforeEach
+    protected void setup() {
+        jdbcTestUtils.drop();
+        jdbcTestUtils.migrate();
+        Awaitility.await().atMost(Duration.ofSeconds(30)).pollInterval(Duration.ofMillis(100)).until(() -> scheduler.isActive());
     }
 
     @SuppressWarnings("unchecked")
     @Test
-    void search() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        String triggerFlowId = "schedule-trigger-search";
-        String triggerNamespace = "io.kestra.tests.schedule";
+    void shouldFindTriggersGivenQueryOnIdPrefix() throws FlowProcessingException, QueueException {
+        // GIVEN
+        Flow flow = generateFlow();
+        flowService.create(GenericFlow.of(flow));
+        createTriggersFromFlow(flow).forEach(jdbcTriggerRepository::save);
 
-        Flow flow = generateFlow(tenant, triggerFlowId);
-        jdbcFlowRepository.create(GenericFlow.of(flow));
-
-        Trigger trigger = Trigger.builder()
-            .flowId(triggerFlowId)
-            .namespace(triggerNamespace)
-            .tenantId(tenant)
-            .triggerId("trigger-nextexec-schedule")
-            .date(ZonedDateTime.now())
-            .build();
-
-        jdbcTriggerRepository.save(trigger);
-        jdbcTriggerRepository.save(trigger.toBuilder().triggerId("trigger-nextexec-polling").build());
-
+        // WHEN
         PagedResults<TriggerController.Triggers> triggers = client.toBlocking().retrieve(
-            HttpRequest.GET(TRIGGER_PATH.formatted(tenant)
-                + "/search?filters[q][EQUALS]=schedule-trigger-search&filters[namespace][STARTS_WITH]=io.kestra.tests&sort=triggerId:asc"),
-            Argument.of(PagedResults.class, TriggerController.Triggers.class)
+            HttpRequest.GET(
+                TRIGGER_PATH + "/search?filters[q][EQUALS]=trigger-nextexec"
+            ), Argument.of(PagedResults.class, TriggerController.Triggers.class)
         );
-        assertThat(triggers.getTotal()).isGreaterThanOrEqualTo(2L);
 
+        // THEN
+        assertThat(triggers.getResults()).hasSize(2);
         assertThat(triggers.getResults().stream().map(TriggerController.Triggers::getTriggerContext).toList())
             .extracting(
-                TriggerContext::getTriggerId,
-                TriggerContext::getNamespace,
-                TriggerContext::getFlowId
+                TriggerState::getTriggerId,
+                TriggerState::getNamespace,
+                TriggerState::getFlowId
             )
             .containsExactlyInAnyOrder(
-                tuple("trigger-nextexec-schedule", triggerNamespace, triggerFlowId),
-                tuple("trigger-nextexec-polling", triggerNamespace, triggerFlowId)
+                tuple("trigger-nextexec-polling", flow.getNamespace(), flow.getId()),
+                tuple("trigger-nextexec-schedule", flow.getNamespace(), flow.getId())
             );
-        PagedResults<TriggerController.Triggers> triggers_oldParameters = client.toBlocking().retrieve(
-            HttpRequest.GET(TRIGGER_PATH.formatted(tenant)
-                + "/search?q=schedule-trigger-search&namespace=io.kestra.tests&sort=triggerId:asc"),
+    }
+
+    @SuppressWarnings("unchecked")
+    @Test
+    void shouldFindTriggersGivenQueryOnNamespace() throws FlowProcessingException, QueueException {
+        // GIVEN
+        Flow flow = generateFlow();
+        flowService.create(GenericFlow.of(flow));
+        createTriggersFromFlow(flow).forEach(jdbcTriggerRepository::save);
+
+        // WHEN
+        PagedResults<TriggerController.Triggers> triggers = client.toBlocking().retrieve(
+            HttpRequest.GET(
+                TRIGGER_PATH + "/search?filters[q][EQUALS]=%s".formatted(flow.getNamespace())
+            ), Argument.of(PagedResults.class, TriggerController.Triggers.class)
+        );
+
+        // THEN
+        assertThat(triggers.getResults()).hasSize(2);
+        assertThat(triggers.getResults().stream().map(TriggerController.Triggers::getTriggerContext).toList())
+            .extracting(
+                TriggerState::getTriggerId,
+                TriggerState::getNamespace,
+                TriggerState::getFlowId
+            )
+            .containsExactlyInAnyOrder(
+                tuple("trigger-nextexec-polling", flow.getNamespace(), flow.getId()),
+                tuple("trigger-nextexec-schedule", flow.getNamespace(), flow.getId())
+            );
+    }
+
+    @SuppressWarnings("unchecked")
+    @Test
+    void shouldFindTriggersGivenFilterOnNamespace() throws FlowProcessingException, QueueException {
+        // GIVEN
+        Flow flow = generateFlow();
+        flowService.create(GenericFlow.of(flow));
+        List<TriggerState> states = createTriggersFromFlow(flow);
+        states.forEach(jdbcTriggerRepository::save);
+
+        // WHEN
+        PagedResults<TriggerController.Triggers> triggers = client.toBlocking().retrieve(
+            HttpRequest.GET(
+                TRIGGER_PATH
+                    + "/search?filters[namespace][STARTS_WITH]=%s&sort=triggerId:asc".formatted(flow.getNamespace())
+            ),
             Argument.of(PagedResults.class, TriggerController.Triggers.class)
         );
-        assertThat(triggers_oldParameters.getTotal()).isGreaterThanOrEqualTo(2L);
 
-        assertThat(triggers_oldParameters.getResults().stream().map(TriggerController.Triggers::getTriggerContext).toList())
+        //THEN
+        assertThat(triggers.getTotal()).isGreaterThanOrEqualTo(2L);
+        assertThat(triggers.getResults().stream().map(TriggerController.Triggers::getTriggerContext).toList())
             .extracting(
-                TriggerContext::getTriggerId,
-                TriggerContext::getNamespace,
-                TriggerContext::getFlowId
+                TriggerState::getTriggerId,
+                TriggerState::getNamespace,
+                TriggerState::getFlowId
             )
             .containsExactlyInAnyOrder(
-                tuple("trigger-nextexec-schedule", triggerNamespace, triggerFlowId),
-                tuple("trigger-nextexec-polling", triggerNamespace, triggerFlowId)
+                tuple("trigger-nextexec-polling", flow.getNamespace(), flow.getId()),
+                tuple("trigger-nextexec-schedule", flow.getNamespace(), flow.getId())
             );
     }
 
     @Test
-    void unlockTrigger() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        Trigger trigger = Trigger.builder()
-            .flowId(IdUtils.create())
-            .namespace(TestsUtils.randomNamespace())
-            .tenantId(tenant)
-            .triggerId(IdUtils.create())
-            .executionId(IdUtils.create())
-            .build();
-
+    void shouldGetSuccessWhenUnlockingTriggerGivenLocked() {
+        // GIVEN
+        TriggerState trigger = createTriggerWith(IdUtils.create(), IdUtils.create(), TENANT_ID).locked(Clock.systemDefaultZone(), true);
         jdbcTriggerRepository.save(trigger);
 
-        trigger = client.toBlocking().retrieve(HttpRequest.POST((TRIGGER_PATH.formatted(tenant) + "/%s/%s/%s/unlock").formatted(
-            trigger.getNamespace(),
-            trigger.getFlowId(),
-            trigger.getTriggerId()
-        ), null), Trigger.class);
-
-        assertThat(trigger.getExecutionId()).isNull();
-        assertThat(trigger.getEvaluateRunningDate()).isNull();
-
-        Trigger unlockedTrigger = jdbcTriggerRepository.findLast(trigger).orElseThrow();
-
-        assertThat(unlockedTrigger.getExecutionId()).isNull();
-        assertThat(unlockedTrigger.getEvaluateRunningDate()).isNull();
-
-        HttpClientResponseException e = assertThrows(HttpClientResponseException.class, () ->
-            client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH.formatted(tenant) + "/%s/%s/%s/unlock").formatted(
-                unlockedTrigger.getNamespace(),
-                unlockedTrigger.getFlowId(),
-                unlockedTrigger.getTriggerId()
-            ), null)));
-
-        assertThat(e.getStatus().getCode()).isEqualTo(HttpStatus.CONFLICT.getCode());
-        assertThat(e.getMessage()).isEqualTo("Illegal state: Trigger is not locked");
-
-        e = assertThrows(HttpClientResponseException.class, () ->
-            client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH.formatted(tenant) + "/%s/%s/%s/unlock").formatted(
-                "bad.namespace",
-                "some-flow-id",
-                "some-trigger-id"
-            ), null))
+        // WHEN
+        HttpResponse<Object> exchange = client.toBlocking().exchange(
+            HttpRequest.POST(
+                (TRIGGER_PATH + "/%s/%s/%s/unlock").formatted(
+                    trigger.getNamespace(),
+                    trigger.getFlowId(),
+                    trigger.getTriggerId()
+                ), null
+            )
         );
 
+        // THEN
+        assertThat(exchange.getStatus().getCode()).isEqualTo(HttpStatus.NO_CONTENT.getCode());
+    }
+
+    @Test
+    void shouldGetConflictWhenUnlockingTriggerGivenUnlocked() {
+        // GIVEN
+        TriggerState trigger = createTriggerWith(IdUtils.create(), IdUtils.create(), TENANT_ID).locked(Clock.systemDefaultZone(), false);
+        jdbcTriggerRepository.save(trigger);
+
+        // WHEN
+        HttpClientResponseException e = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().exchange(
+                HttpRequest.POST(
+                    (TRIGGER_PATH + "/%s/%s/%s/unlock").formatted(
+                        trigger.getNamespace(),
+                        trigger.getFlowId(),
+                        trigger.getTriggerId()
+                    ), null
+                )
+            )
+        );
+
+        // THEN
+        assertThat(e.getStatus().getCode()).isEqualTo(HttpStatus.CONFLICT.getCode());
+        assertThat(e.getMessage()).isEqualTo(
+            "Conflict: trigger [tenant=%s, namespace=%s, flow=%s, trigger=%s] is already unlocked"
+                .formatted(trigger.getTenantId(), trigger.getNamespace(), trigger.getFlowId(), trigger.getTriggerId())
+        );
+    }
+
+    @Test
+    void shouldGetNotFoundWhenUnlockingTriggerGivenUnlocked() {
+        // WHEN
+        HttpClientResponseException e = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().exchange(
+                HttpRequest.POST(
+                    (TRIGGER_PATH + "/%s/%s/%s/unlock").formatted(
+                        "???",
+                        "???",
+                        "???"
+                    ), null
+                )
+            )
+        );
+        // THEN
         assertThat(e.getStatus().getCode()).isEqualTo(HttpStatus.NOT_FOUND.getCode());
+        assertThat(e.getMessage()).isEqualTo("Not Found");
     }
 
     @Test
-    void updated() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        Flow flow = generateFlow(tenant, "flow-with-triggers-updated");
-        jdbcFlowRepository.create(GenericFlow.of(flow));
+    void shouldGetNoContentWhenRestartingTriggerGivenExist() throws FlowProcessingException, QueueException {
+        // GIVEN
+        Flow flow = generateFlow();
+        flowService.create(GenericFlow.of(flow));
 
-        Trigger trigger = Trigger.builder()
+        TriggerState trigger = TriggerState.builder()
             .flowId(flow.getId())
             .namespace(flow.getNamespace())
-            .tenantId(tenant)
-            .triggerId("trigger-nextexec-schedule")
-            .executionId(IdUtils.create())
-            .disabled(true)
-            .build();
-
-        jdbcTriggerRepository.create(trigger);
-
-        Trigger updatedBad = trigger
-            .toBuilder()
-            .executionId("hello")
-            .disabled(false)
-            .tenantId(null)
-            .build();
-
-        Trigger afterUpdated = client.toBlocking().retrieve(HttpRequest.PUT(TRIGGER_PATH.formatted(tenant), updatedBad), Trigger.class);
-
-        // Assert that executionId cannot be edited
-        assertThat(afterUpdated.getExecutionId()).isNotEqualTo("hello");
-        // Assert that disabled can be edited
-        assertThat(afterUpdated.getDisabled()).isFalse();
-    }
-
-    @Test
-    void restartTrigger() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        Flow flow = generateFlow(tenant, "flow-with-triggers");
-        jdbcFlowRepository.create(GenericFlow.of(flow));
-
-        Trigger trigger = Trigger.builder()
-            .flowId(flow.getId())
-            .namespace(flow.getNamespace())
-            .tenantId(tenant)
+            .tenantId(TENANT_ID)
             .triggerId("trigger-to-restart")
-            .executionId(IdUtils.create())
+            .locked(true)
             .disabled(true)
             .build();
 
         jdbcTriggerRepository.create(trigger);
 
-        HttpResponse<?> restarted = client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH.formatted(tenant)
-            + "/io.kestra.tests.schedule/flow-with-triggers/trigger-to-restart/restart"), null));
-        assertThat(restarted.getStatus().getCode()).isEqualTo(HttpStatus.OK.getCode());
+        // WHEN
+        HttpResponse<?> restarted = client.toBlocking().exchange(
+            HttpRequest.POST(
+                (TRIGGER_PATH
+                    + "/%s/%s/%s/restart".formatted(flow.getNamespace(), flow.getId(), trigger.getTriggerId())),
+                null
+            )
+        );
 
-        assertThrows(HttpClientResponseException.class, () -> client.toBlocking().exchange(HttpRequest.POST((
-            TRIGGER_PATH.formatted(tenant) + "/notfound/notfound/notfound/restart"), null)));
+        // THEN
+        assertThat(restarted.getStatus().getCode()).isEqualTo(HttpStatus.NO_CONTENT.getCode());
     }
 
     @Test
-    void unlockTriggerByTriggers() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        Trigger triggerLock = Trigger.builder()
-            .flowId(IdUtils.create())
-            .namespace(TestsUtils.randomNamespace())
-            .tenantId(tenant)
-            .triggerId(IdUtils.create())
-            .executionId(IdUtils.create())
-            .build();
+    void shouldGetNotFoundWhenRestartingTriggerGivenNotExist() {
+        HttpClientResponseException exception = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH + "/???/???/???/restart"), null))
+        );
 
-        Trigger triggerNotLock = Trigger.builder()
-            .flowId(IdUtils.create())
-            .namespace(TestsUtils.randomNamespace())
-            .tenantId(tenant)
-            .triggerId(IdUtils.create())
-            .build();
+        assertThat(exception.getStatus().getCode()).isEqualTo(HttpStatus.NOT_FOUND.getCode());
+    }
 
-        jdbcTriggerRepository.save(triggerLock);
-        jdbcTriggerRepository.save(triggerNotLock);
+    @Test
+    void shouldBulkDeleteTriggersByIds() {
+        // GIVEN
+        TriggerState trigger1 = jdbcTriggerRepository.save(newRandomTriggerState());
+        TriggerState trigger2 = jdbcTriggerRepository.save(newRandomTriggerState());
 
-        List<Trigger> triggers = List.of(triggerLock, triggerNotLock);
+        List<TriggerController.ApiTriggerId> triggers = Stream.of(trigger1, trigger2)
+            .map(it -> new TriggerController.ApiTriggerId(it.getNamespace(), it.getFlowId(), it.getTriggerId()))
+            .toList();
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/unlock/by-triggers", triggers), BulkResponse.class);
+        // WHEN
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.DELETE(
+                TRIGGER_PATH + "/delete/by-triggers", triggers
+            ), BulkResponse.class
+        );
 
+        // THEN
+        assertThat(bulkResponse.getCount()).isEqualTo(2);
+    }
+
+    @Test
+    void shouldDeleteTriggerById() throws FlowProcessingException, QueueException {
+        // GIVEN
+        Flow flow1 = generateFlowWithTrigger(IdUtils.create().toLowerCase());
+        TriggerState state = createTriggerFromFlow(flow1, true);
+        flowService.create(GenericFlow.of(flow1));
+
+        Awaitility.await().atMost(Duration.ofSeconds(30)).pollInterval(Duration.ofMillis(100)).until(() -> jdbcTriggerRepository.findById(state).isPresent());
+
+        // WHEN
+        HttpResponse<Void> response = client.toBlocking()
+            .exchange(
+                HttpRequest.DELETE(TRIGGER_PATH + "/" + state.getNamespace() + "/" + state.getFlowId() + "/" + state.getTriggerId()),
+                Void.class
+            );
+
+        // THEN
+        assertThat(response.getStatus().getCode()).isEqualTo(HttpStatus.NO_CONTENT.getCode());
+    }
+
+    @Test
+    void shouldUnlockTriggerByIdsGivenLocked() {
+        // GIVEN
+        TriggerState state = newRandomTriggerState().locked(Clock.systemDefaultZone(), true);
+
+        jdbcTriggerRepository.save(state);
+
+        // WHEN
+        List<TriggerController.ApiTriggerId> triggers = List.of(new TriggerController.ApiTriggerId(state.getNamespace(), state.getFlowId(), state.getTriggerId()));
+        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(TRIGGER_PATH + "/unlock/by-triggers", triggers), BulkResponse.class);
+
+        // THEN
         assertThat(bulkResponse.getCount()).isEqualTo(1);
     }
 
     @Test
-    void unlockTriggerByQuery() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        String namespace = TestsUtils.randomNamespace();
-        Trigger triggerLock = Trigger.builder()
-            .flowId(IdUtils.create())
-            .namespace(namespace)
-            .tenantId(tenant)
-            .triggerId(IdUtils.create())
-            .executionId(IdUtils.create())
-            .build();
+    void shouldNotUnlockTriggerByIdsGivenUnlocked() {
+        // GIVEN
+        TriggerState state = newRandomTriggerState().locked(Clock.systemDefaultZone(), false);
+        jdbcTriggerRepository.save(state);
 
-        Trigger triggerNotLock = Trigger.builder()
-            .flowId(IdUtils.create())
-            .namespace(namespace)
-            .tenantId(tenant)
-            .triggerId(IdUtils.create())
-            .build();
+        // WHEN
+        List<TriggerController.ApiTriggerId> triggers = List.of(new TriggerController.ApiTriggerId(state.getNamespace(), state.getFlowId(), state.getTriggerId()));
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/unlock/by-triggers", triggers
+            ), BulkResponse.class
+        );
 
-        jdbcTriggerRepository.save(triggerLock);
-        jdbcTriggerRepository.save(triggerNotLock);
+        // THEN
+        assertThat(bulkResponse.getCount()).isEqualTo(0);
+    }
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/unlock/by-query?namespace=" + namespace, null), BulkResponse.class);
+    @Test
+    void shouldUnlockTriggerByQueryGivenLocked() {
+        // GIVEN
+        TriggerState state = newRandomTriggerState().locked(Clock.systemDefaultZone(), true);
 
+        jdbcTriggerRepository.save(state);
+
+        // WHEN
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/unlock/by-query?namespace=" + state.getNamespace(), null
+            ), BulkResponse.class
+        );
+
+        // THEN
         assertThat(bulkResponse.getCount()).isEqualTo(1);
     }
 
     @Test
-    void enableByTriggers() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        String namespace = IdUtils.create();
-        Flow flow1 = generateFlowWithTrigger(tenant, namespace);
-        Flow flow2 = generateFlowWithTrigger(tenant, namespace);
+    void shouldNotUnlockTriggerByQueryGivenUnlocked() {
+        // GIVEN
+        TriggerState state = newRandomTriggerState().locked(Clock.systemDefaultZone(), false);
 
-        Trigger triggerDisabled = createTriggerFromFlow(flow1, true);
-        Trigger triggerNotDisabled = createTriggerFromFlow(flow2, false);
+        jdbcTriggerRepository.save(state);
 
-        jdbcTriggerRepository.save(triggerDisabled);
-        jdbcTriggerRepository.save(triggerNotDisabled);
+        // WHEN
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/unlock/by-query?namespace=" + state.getNamespace(), null
+            ), BulkResponse.class
+        );
 
-        jdbcFlowRepository.create(GenericFlow.of(flow1));
-        jdbcFlowRepository.create(GenericFlow.of(flow2));
-
-
-        List<Trigger> triggers = List.of(triggerDisabled, triggerNotDisabled);
-
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, false)), BulkResponse.class);
-
-        assertThat(bulkResponse.getCount()).isEqualTo(2);
-        assertThat(jdbcTriggerRepository.findLast(triggerDisabled).get().getDisabled()).isFalse();
+        // THEN
+        assertThat(bulkResponse.getCount()).isEqualTo(0);
     }
 
     @Test
-    void enableByQuery() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        String namespace = IdUtils.create();
-        Flow flow1 = generateFlowWithTrigger(tenant, namespace);
-        Flow flow2 = generateFlowWithTrigger(tenant, namespace);
+    void shouldSetDisabledByTriggerIdsGivenFalse() throws FlowProcessingException, QueueException {
+        // GIVEN
+        String namespace = "ns-" + IdUtils.create().toLowerCase();
+        Flow flow1 = generateFlowWithTrigger(namespace);
+        Flow flow2 = generateFlowWithTrigger(namespace);
 
-        Trigger triggerDisabled = createTriggerFromFlow(flow1, true);
-        Trigger triggerNotDisabled = createTriggerFromFlow(flow2, false);
+        flowService.create(GenericFlow.of(flow1));
+        flowService.create(GenericFlow.of(flow2));
 
-        jdbcTriggerRepository.save(triggerDisabled);
-        jdbcTriggerRepository.save(triggerNotDisabled);
+        TriggerState triggerDisabled = jdbcTriggerRepository.save(createTriggerFromFlow(flow1, true));
+        TriggerState triggerNotDisabled = jdbcTriggerRepository.save(createTriggerFromFlow(flow2, false));
 
-        jdbcFlowRepository.create(GenericFlow.of(flow1));
-        jdbcFlowRepository.create(GenericFlow.of(flow2));
+        List<TriggerController.ApiTriggerId> triggers = Stream.of(triggerDisabled, triggerNotDisabled)
+            .map(it -> new TriggerController.ApiTriggerId(it.getNamespace(), it.getFlowId(), it.getTriggerId()))
+            .toList();
 
+        // WHEN
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, false)
+            ), BulkResponse.class
+        );
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-query?namespace=%s&disabled=false".formatted(namespace), null), BulkResponse.class);
-
+        // THEN
         assertThat(bulkResponse.getCount()).isEqualTo(2);
-        assertThat(jdbcTriggerRepository.findLast(triggerDisabled).get().getDisabled()).isFalse();
+        try {
+            Await.until(() -> !jdbcTriggerRepository.findById(triggerDisabled).get().isDisabled(), Duration.ofSeconds(1), Duration.ofSeconds(30));
+        } catch (TimeoutException e) {
+            Assertions.fail("Timeout waiting for trigger to be disabled");
+        }
     }
 
     @Test
-    @FlakyTest
-    void disableByTriggers() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        String namespace = IdUtils.create();
-        Flow flow1 = generateFlowWithTrigger(tenant, namespace);
-        Flow flow2 = generateFlowWithTrigger(tenant, namespace);
+    void shouldSetDisabledByTriggerIdsGivenTrue() throws FlowProcessingException, QueueException {
+        // GIVEN
+        String namespace = "ns-" + IdUtils.create().toLowerCase();
+        Flow flow1 = generateFlowWithTrigger(namespace);
+        Flow flow2 = generateFlowWithTrigger(namespace);
 
-        jdbcFlowRepository.create(GenericFlow.of(flow1));
-        jdbcFlowRepository.create(GenericFlow.of(flow2));
+        flowService.create(GenericFlow.of(flow1));
+        flowService.create(GenericFlow.of(flow2));
 
-        Trigger triggerDisabled = createTriggerFromFlow(flow1, true);
-        Trigger triggerNotDisabled = createTriggerFromFlow(flow2, false);
+        TriggerState triggerDisabled = jdbcTriggerRepository.save(createTriggerFromFlow(flow1, true));
+        TriggerState triggerToDisable = jdbcTriggerRepository.save(createTriggerFromFlow(flow2, false));
 
-        jdbcTriggerRepository.save(triggerDisabled);
-        jdbcTriggerRepository.save(triggerNotDisabled);
+        // WHEN
+        List<TriggerController.ApiTriggerId> triggers = Stream.of(triggerDisabled, triggerToDisable)
+            .map(it -> new TriggerController.ApiTriggerId(it.getNamespace(), it.getFlowId(), it.getTriggerId()))
+            .toList();
 
-        List<Trigger> triggers = List.of(triggerDisabled, triggerNotDisabled);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, true)
+            ), BulkResponse.class
+        );
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, true)), BulkResponse.class);
-
+        // THEN
         assertThat(bulkResponse.getCount()).isEqualTo(2);
-        assertThat(jdbcTriggerRepository.findLast(triggerNotDisabled).get().getDisabled()).isTrue();
+
+        try {
+            Await.until(() -> jdbcTriggerRepository.findById(triggerToDisable).get().isDisabled(), Duration.ofSeconds(1), Duration.ofSeconds(10));
+        } catch (TimeoutException e) {
+            Assertions.fail("Timeout waiting for trigger to be disabled");
+        }
+    }
+
+    @Test
+    void shouldSetDisabledByQueryGivenTrue() throws FlowProcessingException, QueueException {
+        // GIVEN
+        String namespace = "ns-" + IdUtils.create().toLowerCase();
+        Flow flow1 = generateFlowWithTrigger(namespace);
+        Flow flow2 = generateFlowWithTrigger(namespace);
+
+        flowService.create(GenericFlow.of(flow1));
+        flowService.create(GenericFlow.of(flow2));
+
+        jdbcTriggerRepository.save(createTriggerFromFlow(flow1, true));
+        TriggerState toDisable = jdbcTriggerRepository.save(createTriggerFromFlow(flow2, false));
+
+        // WHEN
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/set-disabled/by-query?namespace=%s&disabled=true".formatted(namespace), null
+            ), BulkResponse.class
+        );
+
+        // THEN
+        assertThat(bulkResponse.getCount()).isEqualTo(2);
+        try {
+            Await.until(() -> jdbcTriggerRepository.findById(toDisable).get().isDisabled(), Duration.ofSeconds(1), Duration.ofSeconds(30));
+        } catch (TimeoutException e) {
+            Assertions.fail("Timeout waiting for trigger to be disabled");
+        }
     }
 
     @Test
     void disableByTriggersBadRequest() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
         HttpClientResponseException e = assertThrows(
-            HttpClientResponseException.class, () -> client.toBlocking().retrieve(HttpRequest.POST(
-                    TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-triggers", new SetDisabledRequest(null, null)),
-                BulkResponse.class));
-
+            HttpClientResponseException.class, () -> client.toBlocking().retrieve(
+                HttpRequest.POST(
+                    TRIGGER_PATH + "/set-disabled/by-triggers", new SetDisabledRequest(null, null)
+                ),
+                BulkResponse.class
+            )
+        );
 
         assertThat(e.getStatus().getCode()).isEqualTo(HttpStatus.UNPROCESSABLE_ENTITY.getCode());
     }
 
-    @Test
-    void disableByQuery() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        String namespace = IdUtils.create();
-        Flow flow1 = generateFlowWithTrigger(tenant, namespace);
-        Flow flow2 = generateFlowWithTrigger(tenant, namespace);
-
-        jdbcFlowRepository.create(GenericFlow.of(flow1));
-        jdbcFlowRepository.create(GenericFlow.of(flow2));
-
-        Trigger triggerDisabled = createTriggerFromFlow(flow1, true);
-        Trigger triggerNotDisabled = createTriggerFromFlow(flow2, false);
-
-        jdbcTriggerRepository.save(triggerDisabled);
-        jdbcTriggerRepository.save(triggerNotDisabled);
-
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH.formatted(tenant) + "/set-disabled/by-query?namespace=%s&disabled=true".formatted(namespace), null), BulkResponse.class);
-
-        assertThat(bulkResponse.getCount()).isEqualTo(2);
-        assertThat(jdbcTriggerRepository.findLast(triggerNotDisabled).get().getDisabled()).isTrue();
-    }
-
-    @Test
-    void nextExecutionDate() throws TimeoutException {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        Flow flow = generateFlow(tenant, "flow-with-triggers");
-        jdbcFlowRepository.create(GenericFlow.of(flow));
-        Await.until(
-            () -> client.toBlocking().retrieve(HttpRequest.GET(
-                TRIGGER_PATH.formatted(tenant) + "/search?filters[q][EQUALS]=trigger-nextexec"), Argument.of(PagedResults.class, Trigger.class)).getTotal() >= 2,
-            Duration.ofMillis(100),
-            Duration.ofSeconds(20)
-        );
-        PagedResults<TriggerController.Triggers> triggers = client.toBlocking().retrieve(HttpRequest.GET(
-            TRIGGER_PATH.formatted(tenant) + "/search?filters[q][EQUALS]=trigger-nextexec"), Argument.of(PagedResults.class, TriggerController.Triggers.class));
-        assertThat(triggers.getResults().getFirst().getTriggerContext().getNextExecutionDate()).isNotNull();
-        assertThat(triggers.getResults().get(1).getTriggerContext().getNextExecutionDate()).isNotNull();
-    }
-
-    private Flow generateFlow(String tenant, String flowId) {
+    private Flow generateFlow() {
         return Flow.builder()
-            .id(flowId)
-            .namespace("io.kestra.tests.schedule")
-            .tenantId(tenant)
-            .tasks(Collections.singletonList(Return.builder()
-                .id("task")
-                .type(Return.class.getName())
-                .format(Property.ofValue("return data"))
-                .build()))
-            .triggers(List.of(
-                Schedule.builder()
-                    .id("trigger-nextexec-schedule")
-                    .type(Schedule.class.getName())
-                    .cron("*/1 * * * *")
-                    .build(),
-                PollingTrigger.builder()
-                    .id("trigger-nextexec-polling")
-                    .type(PollingTrigger.class.getName())
-                    .build()
-            ))
+            .tenantId(TENANT_ID)
+            .namespace("ns-" + IdUtils.create().toLowerCase())
+            .id(IdUtils.create())
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("task")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("return data"))
+                        .build()
+                )
+            )
+            .triggers(
+                List.of(
+                    Schedule.builder()
+                        .id("trigger-nextexec-schedule")
+                        .type(Schedule.class.getName())
+                        .cron("*/1 * * * *")
+                        .build(),
+                    PollingTrigger.builder()
+                        .id("trigger-nextexec-polling")
+                        .type(PollingTrigger.class.getName())
+                        .build()
+                )
+            )
             .build();
     }
 
-    private Flow generateFlowWithTrigger(String tenant, String namespace) {
+    private TriggerState newRandomTriggerState() {
+        String random = IdUtils.create();
+        return TriggerState.builder()
+            .tenantId(TENANT_ID)
+            .namespace(random)
+            .flowId(random)
+            .triggerId(random)
+            .vnode(VNodes.computeVNodeFromFlow(FlowId.of(TENANT_ID, random, random, null), schedulerConfiguration.vnodes()))
+            .build();
+    }
+
+    private Flow generateFlowWithTrigger(String namespace) {
         return Flow.builder()
             .id(IdUtils.create())
-            .tenantId(tenant)
+            .tenantId(TENANT_ID)
             .namespace(namespace)
-            .tasks(Collections.singletonList(Return.builder()
-                .id("task")
-                .type(Return.class.getName())
-                .format(Property.ofValue("return data"))
-                .build()))
-            .triggers(List.of(Schedule.builder()
-                .id(IdUtils.create())
-                .type(Schedule.class.getName())
-                .cron("*/1 * * * *")
-                .build()
-            ))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("task")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("return data"))
+                        .build()
+                )
+            )
+            .triggers(
+                List.of(
+                    Schedule.builder()
+                        .id(IdUtils.create())
+                        .type(Schedule.class.getName())
+                        .cron("*/1 * * * *")
+                        .build()
+                )
+            )
             .build();
     }
 
+    private TriggerState createTriggerWith(String flow, String namespace, String triggerId) {
+        return TriggerState.builder()
+            .tenantId(TENANT_ID)
+            .flowId(flow)
+            .namespace(namespace)
+            .triggerId(triggerId)
+            .evaluatedAt(Instant.now())
+            .vnode(VNodes.computeVNodeFromFlow(FlowId.of(TENANT_ID, namespace, flow, null), schedulerConfiguration.vnodes()))
+            .build();
+    }
 
-    private static Trigger createTriggerFromFlow(Flow flow1, Boolean disabled) {
-        return Trigger.builder()
-            .flowId(flow1.getId())
-            .tenantId(flow1.getTenantId())
-            .namespace(flow1.getNamespace())
-            .triggerId(flow1.getTriggers().getFirst().getId())
+    private List<TriggerState> createTriggersFromFlow(Flow flow) {
+        return flow.getTriggers().stream().map(
+            it -> TriggerState.builder()
+                .flowId(flow.getId())
+                .tenantId(flow.getTenantId())
+                .namespace(flow.getNamespace())
+                .triggerId(it.getId())
+                .vnode(VNodes.computeVNodeFromFlow(flow, schedulerConfiguration.vnodes()))
+                .build()
+        ).toList();
+    }
+
+    private TriggerState createTriggerFromFlow(Flow flow, Boolean disabled) {
+        return TriggerState.builder()
+            .flowId(flow.getId())
+            .tenantId(flow.getTenantId())
+            .namespace(flow.getNamespace())
+            .triggerId(flow.getTriggers().getFirst().getId())
             .disabled(disabled)
-            .build();
-    }
-
-    @SuppressWarnings("unchecked")
-    @Test
-    void testGetTrigger() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        Flow flow = createTestFlow(tenant);
-        jdbcFlowRepository.create(GenericFlow.of(flow));
-
-        Trigger trigger = Trigger.builder()
-            .tenantId(tenant)
-            .flowId(flow.getId())
-            .namespace(flow.getNamespace())
-            .triggerId("test-trigger")
-            .build();
-
-        jdbcTriggerRepository.create(trigger);
-
-        PagedResults<Trigger> response = client.toBlocking()
-            .retrieve(
-                HttpRequest.GET(TRIGGER_PATH.formatted(tenant) + "/" + flow.getNamespace() + "/" + flow.getId()),
-                Argument.of(PagedResults.class, Trigger.class)
-            );
-
-        assertThat(response).isNotNull();
-        assertThat(response.getResults()).isNotNull();
-        assertThat(response.getResults().size()).isEqualTo(1);
-        assertThat(response.getResults().getFirst().getNamespace()).isEqualTo(flow.getNamespace());
-        assertThat(response.getResults().getFirst().getFlowId()).isEqualTo(flow.getId());
-        assertThat(response.getResults().getFirst().getTriggerId()).isEqualTo("test-trigger");
-    }
-
-    @Test
-    void testDeleteTriggersByQuery() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        Flow flow = createTestFlow(tenant);
-        jdbcFlowRepository.create(GenericFlow.of(flow));
-
-        Trigger trigger = Trigger.builder()
-            .tenantId(tenant)
-            .flowId(flow.getId())
-            .namespace(flow.getNamespace())
-            .triggerId("delete-test-trigger")
-            .build();
-
-        Trigger triggerByQuery1 = Trigger.builder()
-            .tenantId(tenant)
-            .flowId(flow.getId())
-            .namespace(flow.getNamespace())
-            .triggerId("query-test-trigger-1")
-            .build();
-
-        Trigger triggerByQuery2 = Trigger.builder()
-            .tenantId(tenant)
-            .flowId(flow.getId())
-            .namespace(flow.getNamespace())
-            .triggerId("query-test-trigger-2")
-            .build();
-
-        jdbcTriggerRepository.save(trigger);
-        jdbcTriggerRepository.save(triggerByQuery1);
-        jdbcTriggerRepository.save(triggerByQuery2);
-
-        List<Trigger> allBeforeDelete = jdbcTriggerRepository.find(Pageable.UNPAGED, tenant, filtersForFlow(flow));
-        assertThat(allBeforeDelete.size()).isEqualTo(3);
-
-        HttpResponse<BulkResponse> firstDeleteResponse = client.toBlocking()
-            .exchange(
-                HttpRequest.DELETE(TRIGGER_PATH.formatted(tenant) + "/delete/by-query?filters[namespace][EQUALS]=" + flow.getNamespace() + "&filters[flowId][EQUALS]=" + flow.getId() + "&filters[triggerId][EQUALS]=delete-test-trigger"),
-                BulkResponse.class
-            );
-
-        assertThat(firstDeleteResponse.getStatus().getCode()).isEqualTo(HttpStatus.OK.getCode());
-        assertThat(firstDeleteResponse.body().getCount()).isEqualTo(1);
-
-        List<Trigger> remainingAfterFirstDelete = jdbcTriggerRepository.find(Pageable.UNPAGED, tenant, filtersForFlow(flow));
-        assertThat(remainingAfterFirstDelete.size()).isEqualTo(2);
-
-        HttpResponse<BulkResponse> secondDeleteResponse = client.toBlocking()
-            .exchange(
-                HttpRequest.DELETE(TRIGGER_PATH.formatted(tenant) + "/delete/by-query?filters[namespace][EQUALS]=" + flow.getNamespace() + "&filters[flowId][EQUALS]=" + flow.getId()),
-                BulkResponse.class
-            );
-
-        assertThat(secondDeleteResponse.getStatus().getCode()).isEqualTo(HttpStatus.OK.getCode());
-        assertThat(secondDeleteResponse.body().getCount()).isEqualTo(2);
-
-        List<Trigger> finalRemaining = jdbcTriggerRepository.find(Pageable.UNPAGED, tenant, filtersForFlow(flow));
-        assertThat(finalRemaining.size()).isEqualTo(0);
-
-        Optional<Trigger> deletedTrigger = jdbcTriggerRepository.findLast(TriggerContext.builder()
-            .namespace(flow.getNamespace())
-            .flowId(flow.getId())
-            .triggerId("delete-test-trigger").build());
-
-        assertThat(deletedTrigger.isPresent()).isFalse();
-    }
-
-    private List<QueryFilter> filtersForFlow(Flow flow) {
-        return List.of(
-            QueryFilter.builder()
-                .field(QueryFilter.Field.NAMESPACE)
-                .operation(QueryFilter.Op.EQUALS)
-                .value(flow.getNamespace())
-                .build(),
-            QueryFilter.builder()
-                .field(QueryFilter.Field.FLOW_ID)
-                .operation(QueryFilter.Op.EQUALS)
-                .value(flow.getId())
-                .build()
-        );
-    }
-
-    @Test
-    void testDeleteTriggerById() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        Flow flow = createTestFlow(tenant);
-        jdbcFlowRepository.create(GenericFlow.of(flow));
-
-        String triggerId = "delete-by-id-trigger";
-        Trigger trigger = Trigger.builder()
-            .tenantId(tenant)
-            .flowId(flow.getId())
-            .namespace(flow.getNamespace())
-            .triggerId(triggerId)
-            .build();
-
-        jdbcTriggerRepository.create(trigger);
-
-        HttpResponse<Void> response = client.toBlocking()
-            .exchange(
-                HttpRequest.DELETE(TRIGGER_PATH.formatted(tenant) + "/" + flow.getNamespace() + "/" + flow.getId() + "/" + triggerId),
-                Void.class
-            );
-
-        assertThat(response.getStatus().getCode()).isEqualTo(HttpStatus.NO_CONTENT.getCode());
-
-        Optional<Trigger> deletedTrigger = jdbcTriggerRepository.findLast(TriggerContext.builder()
-            .namespace(flow.getNamespace())
-            .flowId(flow.getId())
-            .triggerId(triggerId).build());
-
-        assertThat(deletedTrigger.isPresent()).isFalse();
-    }
-
-    @Test
-    void exportTriggers() {
-        String tenant = TestsUtils.randomTenant(this.getClass().getSimpleName());
-        when(tenantService.resolveTenant()).thenReturn(tenant);
-        String flowId = IdUtils.create();
-        Trigger t1 = createTrigger(tenant, IdUtils.create(), flowId);
-        Trigger t2 = createTrigger(tenant, IdUtils.create(), flowId);
-        jdbcTriggerRepository.save(t1);
-        jdbcTriggerRepository.save(t2);
-        jdbcFlowRepository.create(GenericFlow.of(createFlowWithTrigger(t1)));
-
-
-        HttpResponse<byte[]> response = client.toBlocking().exchange(
-            HttpRequest.GET(TRIGGER_PATH.formatted(tenant) + "/export/by-query/csv"),
-            byte[].class
-        );
-
-        assertThat(response.getStatus().getCode()).isEqualTo(HttpStatus.OK.getCode());
-        assertThat(response.getHeaders().get("Content-Disposition")).contains("attachment; filename=triggers.csv");
-        String csv = new String(response.body());
-        assertThat(csv).contains("triggerId");
-
-        assertThat(csv).contains(t1.getTriggerId());
-        assertThat(csv).contains(t2.getTriggerId());
-    }
-
-    private static Flow createTestFlow(String tenant) {
-        return Flow.builder()
-            .tenantId(tenant)
-            .id("trigger-test-flow")
-            .namespace(TestsUtils.randomNamespace())
-            .revision(1)
-            .tasks(List.of())
-            .build();
-    }
-
-    private static Trigger createTrigger(String tenant, String triggerId, String flowId){
-        return Trigger.builder()
-            .triggerId(triggerId)
-            .flowId(flowId)
-            .namespace("io.kestra.unit-test")
-            .tenantId(tenant)
-            .triggerId(IdUtils.create())
-            .executionId(IdUtils.create())
-            .date(ZonedDateTime.now())
-            .evaluateRunningDate(ZonedDateTime.now())
-            .build();
-    }
-
-    private static Flow createFlowWithTrigger(Trigger trigger) {
-        return Flow.builder()
-            .id(trigger.getFlowId())
-            .namespace("io.kestra.unit-test")
-            .tenantId(MAIN_TENANT)
-            .revision(1)
-            .tasks(Collections.singletonList(Log.builder().id("test").type(Log.class.getName()).message("{{ parent.outputs.args['my-forward'] }}").build()))
-            .triggers(List.of(Schedule.builder().id(trigger.getTriggerId()).type(Schedule.class.getName()).cron("* * * * *").build()))
+            .vnode(VNodes.computeVNodeFromFlow(flow, schedulerConfiguration.vnodes()))
             .build();
     }
 }
